// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fix #127 - echo statements 1`] = `
Program {
  "children": Array [
    Echo {
      "arguments": Array [
        String {
          "isDoubleQuote": true,
          "kind": "string",
          "raw": "\\"hello\\"",
          "value": "hello",
        },
      ],
      "kind": "echo",
      "shortForm": false,
    },
    Inline {
      "kind": "inline",
      "raw": " world",
      "value": " world",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`fix #127 - inline 1`] = `
Program {
  "children": Array [
    Inline {
      "kind": "inline",
      "raw": "?>?>",
      "value": "?>?>",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`test program 1`] = `
Program {
  "children": Array [],
  "errors": Array [],
  "kind": "program",
}
`;
